Feat(eos_cli_config_gen): Option to set RCF route bgp address-family vpn-ipv6/ipv4 and redistribute. (#3819)

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-vpn-ipv4-vpn-ipv6.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-vpn-ipv4-vpn-ipv6.cfg
@@ -37,9 +37,13 @@ router bgp 65103
       neighbor MPLS-IBGP-PEERS activate
       neighbor MPLS-IBGP-PEERS route-map RM-IBGP-PEER-IN4 in
       neighbor MPLS-IBGP-PEERS route-map RM-IBGP-PEER-OUT4 out
+      neighbor Test_RCF rcf in Address_Family_VPN_IPV4_In()
+      neighbor Test_RCF rcf out Address_Family_VPN_IPV4_Out()
       neighbor 192.168.255.4 activate
       neighbor 192.168.255.4 route-map RM-NEIGHBOR-PEER-IN4 in
       neighbor 192.168.255.4 route-map RM-NEIGHBOR-PEER-OUT4 out
+      neighbor 192.168.255.5 rcf in Address_Family_VPN_IPV4_In()
+      neighbor 192.168.255.5 rcf out Address_Family_VPN_IPV4_Out()
       neighbor default encapsulation mpls next-hop-self source-interface Loopback0
       route import match-failure action discard
    !
@@ -48,9 +52,13 @@ router bgp 65103
       neighbor MPLS-IBGP-PEERS activate
       neighbor MPLS-IBGP-PEERS route-map RM-IBGP-PEER-IN6 in
       neighbor MPLS-IBGP-PEERS route-map RM-IBGP-PEER-OUT6 out
+      neighbor Test_RCF rcf in Address_Family_VPN_IPV6_In()
+      neighbor Test_RCF rcf out Address_Family_VPN_IPV6_Out()
       neighbor 2001:cafe:192:168::4 activate
       neighbor 2001:cafe:192:168::4 route-map RM-NEIGHBOR-PEER-IN6 in
       neighbor 2001:cafe:192:168::4 route-map RM-NEIGHBOR-PEER-OUT6 out
+      neighbor 2001:cafe:192:168::5 rcf in Address_Family_VPN_IPV6_In()
+      neighbor 2001:cafe:192:168::5 rcf out Address_Family_VPN_IPV6_Out()
       neighbor default encapsulation mpls next-hop-self source-interface Loopback0
       route import match-failure action discard
 !
