--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-vpn-ipv4-vpn-ipv6.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-vpn-ipv4-vpn-ipv6.yml
@@ -36,11 +36,17 @@ router_bgp:
         activate: true
         route_map_in: RM-IBGP-PEER-IN4
         route_map_out: RM-IBGP-PEER-OUT4
+      - name: Test_RCF
+        rcf_in: Address_Family_VPN_IPV4_In()
+        rcf_out: Address_Family_VPN_IPV4_Out()
     neighbors:
       - ip_address: 192.168.255.4
         activate: true
         route_map_in: RM-NEIGHBOR-PEER-IN4
         route_map_out: RM-NEIGHBOR-PEER-OUT4
+      - ip_address: 192.168.255.5
+        rcf_in: Address_Family_VPN_IPV4_In()
+        rcf_out: Address_Family_VPN_IPV4_Out()
     neighbor_default_encapsulation_mpls_next_hop_self:
       source_interface: Loopback0
   address_family_vpn_ipv6:
@@ -52,10 +58,16 @@ router_bgp:
         activate: true
         route_map_in: RM-IBGP-PEER-IN6
         route_map_out: RM-IBGP-PEER-OUT6
+      - name: Test_RCF
+        rcf_in: Address_Family_VPN_IPV6_In()
+        rcf_out: Address_Family_VPN_IPV6_Out()
     neighbors:
       - ip_address: 2001:cafe:192:168::4
         activate: true
         route_map_in: RM-NEIGHBOR-PEER-IN6
         route_map_out: RM-NEIGHBOR-PEER-OUT6
+      - ip_address: 2001:cafe:192:168::5
+        rcf_in: Address_Family_VPN_IPV6_In()
+        rcf_out: Address_Family_VPN_IPV6_Out()
     neighbor_default_encapsulation_mpls_next_hop_self:
       source_interface: Loopback0
