change nat to IE-<POLICY_TYPE>-NAT

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -17,11 +17,11 @@ service routing protocols model multi-agent
 ip as-path access-list ASPATH-WAN permit 65000 any
 !
 !
-ip nat profile PORT-ONLY-VRF-AWARE-NAT
-   ip nat source dynamic access-list ALLOW-ALL pool PORT-ONLY-POOL
-!
-ip nat profile VRF-AWARE-NAT
+ip nat profile IE-DIRECT-NAT
    ip nat source dynamic access-list ALLOW-ALL overload
+!
+ip nat profile IE-ZSCALER-NAT
+   ip nat source dynamic access-list ALLOW-ALL pool PORT-ONLY-POOL
 !
 hostname cv-pathfinder-edge
 !
@@ -308,7 +308,7 @@ interface Ethernet2
    no shutdown
    no switchport
    ip address 172.15.5.5/31
-   ip nat service-profile VRF-AWARE-NAT
+   ip nat service-profile IE-DIRECT-NAT
 !
 interface Ethernet3
    description Comcast-5G_AF830
@@ -356,7 +356,7 @@ interface Tunnel100
    description Internet Exit ZSCALER-EXIT-POLICY-1 PRI
    mtu 1394
    ip address unnumbered Ethernet3
-   ip nat service-profile PORT-ONLY-VRF-AWARE-NAT
+   ip nat service-profile IE-ZSCALER-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.37.121.1
@@ -366,7 +366,7 @@ interface Tunnel101
    description Internet Exit ZSCALER-EXIT-POLICY-1 SEC
    mtu 1394
    ip address unnumbered Ethernet3
-   ip nat service-profile PORT-ONLY-VRF-AWARE-NAT
+   ip nat service-profile IE-ZSCALER-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.39.77.1
@@ -376,7 +376,7 @@ interface Tunnel102
    description Internet Exit ZSCALER-EXIT-POLICY-1 TER
    mtu 1394
    ip address unnumbered Ethernet3
-   ip nat service-profile PORT-ONLY-VRF-AWARE-NAT
+   ip nat service-profile IE-ZSCALER-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.50.9.1
