--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1A.cfg
@@ -17,7 +17,7 @@ service routing protocols model multi-agent
 ip as-path access-list ASPATH-WAN permit 65000 any
 !
 !
-ip nat profile VRF-AWARE-NAT
+ip nat profile IE-DIRECT-NAT
    ip nat source dynamic access-list ALLOW-ALL overload
 !
 hostname cv-pathfinder-transit1A
@@ -310,7 +310,7 @@ interface Ethernet2.42
    no shutdown
    encapsulation dot1q vlan 666
    ip address 172.16.6.6/31
-   ip nat service-profile VRF-AWARE-NAT
+   ip nat service-profile IE-DIRECT-NAT
 !
 interface Ethernet52
    description P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet1
