--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
@@ -230,7 +230,7 @@ ethernet_interfaces:
   description: ATT_404
   dhcp_client_accept_default_route: true
   ip_nat:
-    service_profile: VRF-AWARE-NAT
+    service_profile: IE-DIRECT-NAT
 loopback_interfaces:
 - name: Loopback0
   description: Router_ID
@@ -625,24 +625,24 @@ ip_access_lists:
     source: any
     destination: any
 ip_nat:
+  profiles:
+  - name: IE-DIRECT-NAT
+    source:
+      dynamic:
+      - access_list: ALLOW-ALL
+        nat_type: overload
+  - name: IE-ZSCALER-NAT
+    source:
+      dynamic:
+      - access_list: ALLOW-ALL
+        pool_name: PORT-ONLY-POOL
+        nat_type: pool
   pools:
   - name: PORT-ONLY-POOL
     type: port-only
     ranges:
     - first_port: 1500
       last_port: 65535
-  profiles:
-  - name: PORT-ONLY-VRF-AWARE-NAT
-    source:
-      dynamic:
-      - access_list: ALLOW-ALL
-        pool_name: PORT-ONLY-POOL
-        nat_type: pool
-  - name: VRF-AWARE-NAT
-    source:
-      dynamic:
-      - access_list: ALLOW-ALL
-        nat_type: overload
 router_service_insertion:
   enabled: true
   connections:
@@ -744,7 +744,7 @@ tunnel_interfaces:
   source_interface: Ethernet3
   destination: 10.37.121.1
   ipsec_profile: IE-ZSCALER-EXIT-POLICY-1-PROFILE
-  nat_profile: PORT-ONLY-VRF-AWARE-NAT
+  nat_profile: IE-ZSCALER-NAT
 - name: Tunnel101
   description: Internet Exit ZSCALER-EXIT-POLICY-1 SEC
   mtu: 1394
@@ -753,7 +753,7 @@ tunnel_interfaces:
   source_interface: Ethernet3
   destination: 10.39.77.1
   ipsec_profile: IE-ZSCALER-EXIT-POLICY-1-PROFILE
-  nat_profile: PORT-ONLY-VRF-AWARE-NAT
+  nat_profile: IE-ZSCALER-NAT
 - name: Tunnel102
   description: Internet Exit ZSCALER-EXIT-POLICY-1 TER
   mtu: 1394
@@ -762,7 +762,7 @@ tunnel_interfaces:
   source_interface: Ethernet3
   destination: 10.50.9.1
   ipsec_profile: IE-ZSCALER-EXIT-POLICY-1-PROFILE
-  nat_profile: PORT-ONLY-VRF-AWARE-NAT
+  nat_profile: IE-ZSCALER-NAT
 - name: Tunnel110
   description: Internet Exit ZSCALER-EXIT-POLICY-2 PRI
   mtu: 1394
@@ -771,7 +771,7 @@ tunnel_interfaces:
   source_interface: Ethernet3
   destination: 10.37.121.1
   ipsec_profile: IE-ZSCALER-EXIT-POLICY-2-PROFILE
-  nat_profile: PORT-ONLY-VRF-AWARE-NAT
+  nat_profile: IE-ZSCALER-NAT
 - name: Tunnel111
   description: Internet Exit ZSCALER-EXIT-POLICY-2 SEC
   mtu: 1394
@@ -780,7 +780,7 @@ tunnel_interfaces:
   source_interface: Ethernet3
   destination: 10.39.77.1
   ipsec_profile: IE-ZSCALER-EXIT-POLICY-2-PROFILE
-  nat_profile: PORT-ONLY-VRF-AWARE-NAT
+  nat_profile: IE-ZSCALER-NAT
 - name: Tunnel112
   description: Internet Exit ZSCALER-EXIT-POLICY-2 TER
   mtu: 1394
@@ -789,7 +789,7 @@ tunnel_interfaces:
   source_interface: Ethernet3
   destination: 10.50.9.1
   ipsec_profile: IE-ZSCALER-EXIT-POLICY-2-PROFILE
-  nat_profile: PORT-ONLY-VRF-AWARE-NAT
+  nat_profile: IE-ZSCALER-NAT
 monitor_connectivity:
   interface_sets:
   - name: SET-Ethernet3
