--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-v4-v6-evpn.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-v4-v6-evpn.cfg
@@ -114,6 +114,7 @@ router bgp 65100
       route-target import evpn route-map RM-DENY-DEFAULT
       route-target import vpn-ipv4 1:30011
       route-target import vpn-ipv4 rcf RT_IMPORT_AF_RCF() vpn-route filter-rcf RT_IMPORT_AF_RCF_FILTER()
+      route-target import vpn-ipv4 route-map RT_IMPORT_AF_RM
       route-target export evpn 1:30001
       route-target export evpn rcf RT_EXPORT_AF_RCF()
       redistribute connected
