--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-vrf-address-families.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-vrf-address-families.cfg
@@ -84,6 +84,7 @@ router bgp 65001
          neighbor aa::2 rcf out VRF_AFIPV6_RCF_OUT()
          network aa::/64
       redistribute connected rcf VRF_AFIPV6_RCF_CONNECTED()
+      redistribute isis include leaked
       redistribute static route-map VRF_AFIPV6_RM_STATIC
       !
       address-family ipv6 multicast
