--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-v4-v6-evpn.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-v4-v6-evpn.yml
@@ -145,6 +145,7 @@ router_bgp:
             route_targets:
               - "1:30011"
             rcf: RT_IMPORT_AF_RCF()
+            route_map: RT_IMPORT_AF_RM
             vpn_route_filter_rcf: RT_IMPORT_AF_RCF_FILTER()
         export:
           - address_family: evpn
