--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -1698,7 +1698,7 @@ keys:
               source:
                 type: str
                 description: 'This field supports substitution of the fields "interface_ip"
-                  and "peer_ip".
+                  for SVIs and both "interface_ip" and "peer_ip" for Layer 3 interfaces.
 
                   Alternatively it can be set with a static value of "any", "<ip>/<mask>"
                   or "<ip>".
@@ -1709,7 +1709,7 @@ keys:
               destination:
                 type: str
                 description: 'This field supports substitution of the fields "interface_ip"
-                  and "peer_ip".
+                  for SVIs and both "interface_ip" and "peer_ip" for Layer 3 interfaces.
 
                   Alternatively it can be set with a static value of "any", "<ip>/<mask>"
                   or "<ip>".
@@ -8699,7 +8699,8 @@ $defs:
           description: 'Name of the IPv4 access-list to be assigned in the ingress
             direction.
 
-            The access-list must be defined under `ipv4_acls`.
+            The access-list must be defined under `ipv4_acls` and supports field substitution
+            for "interface_ip" and "peer_ip".
 
             Required for all WAN interfaces (`wan_carrier` is set) unless the carrier
             is marked as ''trusted'' under `wan_carriers`.'
@@ -8710,7 +8711,8 @@ $defs:
           description: 'Name of the IPv4 Access-list to be assigned in the egress
             direction.
 
-            The access-list must be defined under `ipv4_acls`.'
+            The access-list must be defined under `ipv4_acls` and supports field substitution
+            for "interface_ip" and "peer_ip".'
           type: str
           convert_types:
           - int
@@ -9105,14 +9107,16 @@ $defs:
       ipv4_acl_in:
         description: 'Name of the IPv4 access-list to be assigned in the ingress direction.
 
-          The access-list must be defined under `ipv4_acls`.'
+          The access-list must be defined under `ipv4_acls` and supports substitution
+          of the field "interface_ip".'
         type: str
         convert_types:
         - int
       ipv4_acl_out:
         description: 'Name of the IPv4 Access-list to be assigned in the egress direction.
 
-          The access-list must be defined under `ipv4_acls`.'
+          The access-list must be defined under `ipv4_acls` and supports substitution
+          of the field "interface_ip".'
         type: str
         convert_types:
         - int
