Adding shutdown for overlay peers and fixing the comments

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-SPINE1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-SPINE1.cfg
@@ -331,9 +331,11 @@ router bgp 65001
    neighbor 192.168.255.19 description DC1-CL1B
    neighbor 192.168.255.21 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.255.21 remote-as 65110
+   neighbor 192.168.255.21 shutdown
    neighbor 192.168.255.21 description DC1_UNDEPLOYED_LEAF1A
    neighbor 192.168.255.22 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.255.22 remote-as 65111
+   neighbor 192.168.255.22 shutdown
    neighbor 192.168.255.22 description DC1_UNDEPLOYED_LEAF1B
    neighbor 192.168.255.33 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.255.33 remote-as 65151
