--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/management-security.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/management-security.cfg
@@ -27,12 +27,12 @@ management security
       maximum repetitive 6
       maximum sequential 7
    session shared-secret profile profile0
-      secret name1 7 $1c$mNvaIXPetcQ3hy7oUnTU3w== receive-lifetime 2024-12-20 10:00:00 2025-12-20 10:00:00 transmit-lifetime 2024-12-20 10:00:00 2025-12-20 10:00:00
+      secret name1 0 name1_secret receive-lifetime 2024-12-20 10:00:00 2025-12-20 10:00:00 transmit-lifetime 2024-12-20 10:00:00 2025-12-20 10:00:00
    session shared-secret profile profile1
       secret name0 7 $1c$mNvaIXPetcSA2UnFwIaxwA== receive-lifetime infinite transmit-lifetime infinite
       secret name1 7 $1c$mNvaIXPetcQ3hy7oUnTU3w== receive-lifetime 12/20/2024 10:00:00 12/20/2025 10:00:00 transmit-lifetime infinite local-time
    session shared-secret profile profile2
-      secret name3 7 $1c$mNvaIXPetcQoGbYuwfX4Ng== receive-lifetime 2024-12-20 10:00:00 2025-12-20 10:00:00 transmit-lifetime 12/20/2024 10:00:00 12/10/2025 10:00:00
+      secret name3 8a $Ra3am9YZlbg5d65txucxTg==$DMoPxa9Wu5elK39pofFgaw==$zgEBfv+w/AIr1FnW receive-lifetime 2024-12-20 10:00:00 2025-12-20 10:00:00 transmit-lifetime 12/20/2024 10:00:00 12/10/2025 10:00:00
    ssl profile certificate-profile
       certificate eAPI.crt key eAPI.key
       crl ca.crl
