--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/monitor_telemetry_postcard_policy.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/monitor_telemetry_postcard_policy.schema.yml
@@ -27,7 +27,7 @@ keys:
                 description: Configure destination IP address of GRE tunnel.
               version:
                 type: int
-                description: Postcard version
+                description: Postcard version.
                 valid_values: [ 1, 2 ]
           sample:
             type: dict
