--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -6380,6 +6380,7 @@ keys:
               type: str
             secrets:
               type: list
+              primary_key: name
               items:
                 type: dict
                 keys:
@@ -6387,9 +6388,10 @@ keys:
                     type: str
                   secret:
                     type: str
+                    required: true
                   secret_type:
                     type: str
-                    default: '7'
+                    default: '0'
                     valid_values:
                     - '0'
                     - '7'
@@ -6398,6 +6400,7 @@ keys:
                     - int
                   receive_lifetime:
                     type: dict
+                    required: true
                     keys:
                       infinite:
                         type: bool
@@ -6426,6 +6429,7 @@ keys:
                           e.g 2024-12-20 10:00:00'
                   transmit_lifetime:
                     type: dict
+                    required: true
                     keys:
                       infinite:
                         type: bool
