--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-wan2-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-wan2-catalog.yml
@@ -377,13 +377,13 @@ anta.tests.software:
 anta.tests.stun:
 - VerifyStunClient:
     result_overwrite:
-      custom_field: 'source address: 172.18.4.2 source port: 4500'
+      custom_field: 'Source IPv4 Address: 172.18.4.2 Source Port: 4500'
     stun_clients:
     - source_address: 172.18.4.2
       source_port: 4500
 - VerifyStunClient:
     result_overwrite:
-      custom_field: 'source address: 100.64.4.2 source port: 4500'
+      custom_field: 'Source IPv4 Address: 100.64.4.2 Source Port: 4500'
     stun_clients:
     - source_address: 100.64.4.2
       source_port: 4500
