Addressing multiple comments.

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/policy-maps.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/policy-maps.yml
@@ -58,10 +58,11 @@ policy_maps:
               ip_address: 192.168.4.2
               recursive: true
   copp:
-    name: copp-system-policy
+    enable: true
     classes:
       - name: cls1
         shape: 1000
+        minimum_bandwidth: 1000
       - name: cls2
         shape: 2000
       - name: a_class
