--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/policy_maps.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/policy_maps.schema.yml
@@ -171,9 +171,9 @@ keys:
       copp:
         type: dict
         keys:
-          name:
-            type: str
-            description: Name of control-plane poilcy.
+          enable:
+            type: bool
+            description: Enable control-plane policy.
           classes:
             type: list
             primary_key: name
@@ -184,6 +184,11 @@ keys:
                   type: str
                 shape:
                   type: int
-                  description: Shape value in pps.
-                  convert_types:
-                    - str
+                  description: Shape value in packets per second.
+                  min: 0
+                  max: 10000000
+                minimum_bandwidth:
+                  type: int
+                  description: Minimum bandwidth in packets per second.
+                  min: 0
+                  max: 10000000
