--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/management-security.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/management-security.yml
@@ -63,7 +63,7 @@ management_security:
   shared_secret_profiles:
     - profile: profile1
       secrets:
-        - name: name1
+        - name: secretone
           secret: $1c$mNvaIXPetcQ3hy7oUnTU3w==
           receive_lifetime:
             start_date_time: 12/20/2024 10:00:00
@@ -71,7 +71,7 @@ management_security:
           transmit_lifetime:
             infinite: true
           local_time: true
-        - name: name0
+        - name: secrettwo
           secret: $1c$mNvaIXPetcSA2UnFwIaxwA==
           secret_type: "7"
           receive_lifetime:
@@ -80,7 +80,7 @@ management_security:
             infinite: true
     - profile: profile2
       secrets:
-        - name: name3
+        - name: secretthree
           secret: $Ra3am9YZlbg5d65txucxTg==$DMoPxa9Wu5elK39pofFgaw==$zgEBfv+w/AIr1FnW
           secret_type: "8a"
           receive_lifetime:
@@ -91,7 +91,7 @@ management_security:
             end_date_time: "12/10/2025 10:00:00"
     - profile: profile0
       secrets:
-        - name: name1
+        - name: secretfour
           secret: name1_secret
           secret_type: "0"
           receive_lifetime:
@@ -100,7 +100,7 @@ management_security:
           transmit_lifetime:
             start_date_time: "2024-12-20 10:00:00"
             end_date_time: "2025-12-20 10:00:00"
-        - name: name
+        - name: secretfive
           secret: secret
           receive_lifetime:
             infinite: true
