--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -10455,9 +10455,13 @@ keys:
               keys:
                 profile:
                   type: str
+                  required: true
                   description: Name of profile defined under `management_security`.
                 hash_algorithm:
                   type: str
+                  required: true
+                  description: "Warning:\n  hmac-sha-256 configuration with eapi works
+                    on EOS version 4.31 and above."
                   valid_values:
                   - aes-128-cmac-96
                   - hmac-sha-256
