--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/host_vars/duplicate-tunnel-interface-internet-exit.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/host_vars/duplicate-tunnel-interface-internet-exit.yml
@@ -117,18 +117,20 @@ cv_pathfinder_internet_exit_policies:
   - name: ZSCALER-EXIT-POLICY-1
     type: zscaler
     zscaler:
-      cloud_name: zscalerbeta
       domain_name: test.local
       ipsec_key_salt: THIS_SHOULD_BE_VAULTED
   - name: ZSCALER-EXIT-POLICY-2
     fallback_to_system_default: False
     type: zscaler
     zscaler:
-      cloud_name: zscalerbeta
       domain_name: test.local
       ipsec_key_salt: THIS_SHOULD_BE_VAULTED
 
 zscaler_endpoints:
+  cloud_name: zscalerbeta
+  device_location:
+    city: Santa Clara, CA
+    country: United States
   primary:
     city: Fremont, CA
     datacenter: FMT1
