--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-SPINE1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-SPINE1.cfg
@@ -291,9 +291,11 @@ router bgp 65001
    neighbor 172.31.255.65 description DC1-CL1B_Ethernet1
    neighbor 172.31.255.129 peer group UNDERLAY-PEERS
    neighbor 172.31.255.129 remote-as 65110
+   neighbor 172.31.255.129 shutdown
    neighbor 172.31.255.129 description DC1_UNDEPLOYED_LEAF1A_Ethernet49/1
    neighbor 172.31.255.161 peer group UNDERLAY-PEERS
    neighbor 172.31.255.161 remote-as 65111
+   neighbor 172.31.255.161 shutdown
    neighbor 172.31.255.161 description DC1_UNDEPLOYED_LEAF1B_Ethernet49/1
    neighbor 192.168.255.9 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.255.9 remote-as 65101
@@ -330,9 +332,11 @@ router bgp 65001
    neighbor 192.168.255.19 description DC1-CL1B
    neighbor 192.168.255.21 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.255.21 remote-as 65110
+   neighbor 192.168.255.21 shutdown
    neighbor 192.168.255.21 description DC1_UNDEPLOYED_LEAF1A
    neighbor 192.168.255.22 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.255.22 remote-as 65111
+   neighbor 192.168.255.22 shutdown
    neighbor 192.168.255.22 description DC1_UNDEPLOYED_LEAF1B
    neighbor 192.168.255.33 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.255.33 remote-as 65151
