--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-SPINE4.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-SPINE4.cfg
@@ -241,9 +241,11 @@ router bgp 65001
    neighbor 172.31.255.71 description DC1-CL1B_Ethernet4
    neighbor 172.31.255.135 peer group UNDERLAY-PEERS
    neighbor 172.31.255.135 remote-as 65110
+   neighbor 172.31.255.135 shutdown
    neighbor 172.31.255.135 description DC1_UNDEPLOYED_LEAF1A_Ethernet52/1
    neighbor 172.31.255.167 peer group UNDERLAY-PEERS
    neighbor 172.31.255.167 remote-as 65111
+   neighbor 172.31.255.167 shutdown
    neighbor 172.31.255.167 description DC1_UNDEPLOYED_LEAF1B_Ethernet52/1
    neighbor 192.168.255.9 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.255.9 remote-as 65101
@@ -280,9 +282,11 @@ router bgp 65001
    neighbor 192.168.255.19 description DC1-CL1B
    neighbor 192.168.255.21 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.255.21 remote-as 65110
+   neighbor 192.168.255.21 shutdown
    neighbor 192.168.255.21 description DC1_UNDEPLOYED_LEAF1A
    neighbor 192.168.255.22 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.255.22 remote-as 65111
+   neighbor 192.168.255.22 shutdown
    neighbor 192.168.255.22 description DC1_UNDEPLOYED_LEAF1B
    redistribute connected route-map RM-CONN-2-BGP
    !
