--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-SPINE1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-SPINE1.yml
@@ -128,11 +128,13 @@ router_bgp:
     remote_as: '65110'
     peer: DC1_UNDEPLOYED_LEAF1A
     description: DC1_UNDEPLOYED_LEAF1A_Ethernet49/1
+    shutdown: true
   - ip_address: 172.31.255.161
     peer_group: UNDERLAY-PEERS
     remote_as: '65111'
     peer: DC1_UNDEPLOYED_LEAF1B
     description: DC1_UNDEPLOYED_LEAF1B_Ethernet49/1
+    shutdown: true
   - ip_address: 10.10.101.9
     peer_group: UNDERLAY-PEERS
     remote_as: '65161'
@@ -198,11 +200,13 @@ router_bgp:
     peer: DC1_UNDEPLOYED_LEAF1A
     description: DC1_UNDEPLOYED_LEAF1A
     remote_as: '65110'
+    shutdown: true
   - ip_address: 192.168.255.22
     peer_group: EVPN-OVERLAY-PEERS
     peer: DC1_UNDEPLOYED_LEAF1B
     description: DC1_UNDEPLOYED_LEAF1B
     remote_as: '65111'
+    shutdown: true
   - ip_address: 192.168.255.33
     peer_group: EVPN-OVERLAY-PEERS
     peer: MH-LEAF1A
