--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_segment_security.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_segment_security.schema.yml
@@ -119,7 +119,7 @@ keys:
                       keys:
                         from:
                           type: str
-                          description: The name of the source segment.
+                          description: The name of the source segment or 'forwarding-segments' for all segments.
                         policy:
                           type: str
                           description: The name of the policy to apply. The built-in policies are 'policy-forward-all' and 'policy-drop-all'.
