--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -592,9 +592,11 @@ keys:
               keys:
                 profile:
                   type: str
+                  required: true
                   description: To apply a profile, it must be created under "management-security".
                 hash_algorithm:
                   type: str
+                  required: true
                   valid_values:
                     - "aes-128-cmac-96"
                     - "hmac-sha-256"
