--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -6407,6 +6407,7 @@ keys:
                       start_date_time:
                         type: str
                         description: 'Start date and time of lifetime of the secret.
+                          End date should be greater than start date.
 
                           Formats supported:
 
